<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_buscar"
            android:icon="@drawable/ic_search"
            android:title="@string/texto_buscar" />
        <item
            android:id="@+id/nav_grupos"
            android:icon="@drawable/ic_group"
            android:title="@string/texto_grupos" />
        <item
            android:id="@+id/nav_investigadores"
            android:icon="@drawable/ic_investigator"
            android:title="@string/texto_investigadores" />
        <item
            android:id="@+id/nav_actualizar"
            android:icon="@drawable/ic_update"
            android:title="@string/texto_actualizar" />

    </group>

    <item android:title="@string/texto_cambiar_idioma">
        <menu>
            <item
                android:id="@+id/nav_idioma_espaniol"
                android:icon="@drawable/espaniol"
                android:title="@string/idioma_espaniol" />
            <item
                android:id="@+id/nav_idioma_ingles"
                android:icon="@drawable/ingles"
                android:title="@string/idioma_ingles" />
        </menu>
    </item>

</menu>
