<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    tools:context="roy.cvuq.uniquindio.edu.co.cvuqv1.fragment.registro_investigador.AddInvestigatorFragment">

    <ScrollView
        android:id="@+id/scroll_view_add_investigator"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:id="@+id/agregar_imagen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/add_img_marginLR"
                android:layout_marginRight="@dimen/add_img_marginLR"
                android:layout_marginTop="15dp"
                android:background="@drawable/border_black"
                android:orientation="vertical"
                android:padding="1dp">

                <ImageView
                    android:id="@+id/image_investigator"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/image_investigator" />

                <TextView
                    android:id="@+id/texto_fotografia_add_investigator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/texto_agregar_fotografia"
                    android:textSize="@dimen/textSize_add"
                    android:textStyle="bold" />

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="15dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/texto_nombre"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/apellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/texto_apellido"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/texto_correo"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/nacionalidad_investigador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/texto_nacionalidad"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textSize_add"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_grupo_investigacion"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spinner_height_add"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/lineas_investigacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/texto_lineas_investigacion"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textSize_add"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_black"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="0.5"
                    android:text="@string/texto_genero"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textSize_add"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/genero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <RadioButton
                        android:id="@+id/masculino"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:buttonTint="@color/colorDarkGreen"
                        android:text="@string/texto_masculino"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/femenino"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/radioButton_marginLeft_add"
                        android:layout_weight="0.5"
                        android:buttonTint="@color/colorDarkGreen"
                        android:checked="true"
                        android:text="@string/texto_femenino"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />

                </RadioGroup>

            </LinearLayout>

            <Spinner
                android:id="@+id/spinner_categoria"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spinner_height_add"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/formacion_academica"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/texto_formacion_academica"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/link_cvlac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/texto_link_cvlac"
                    android:inputType="textUri" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/guardar_investigador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/buttonMargin_add"
                android:layout_marginTop="@dimen/buttonMargin_add"
                android:backgroundTint="@color/colorDarkGreen"
                android:elevation="1dp"
                android:text="@string/texto_guardar"
                android:textColor="@color/colorWhite"
                android:theme="@style/PrimaryButton" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
